[package]
name = "sharding-scale-out-demo"
version = "0.1.0"
authors = ["brandon <brandon@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
exit-future = "0.1"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
